# ProgrammingTechnologies

./: .travis.yml  CMakeLists.txt  README.md  backup.sh  cleaner.sh  readme.txt
A/: preparing.py
B/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lib.h
C/: a.out  main.cpp
PatternsCollection/: CMakeLists.txt
PatternsCollection/AbstractFactory/cpp-source/: Makefile  cmake_install.cmake
PatternsCollection/Adapter/cpp-source/: Makefile  cmake_install.cmake
PatternsCollection/Bridge/cpp-source/: Makefile  cmake_install.cmake
PatternsCollection/Builder/cpp-source/: Makefile  cmake_install.cmake
PatternsCollection/Composite/cpp-source/: Makefile  (+1 more)
Sea_battles/: .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  Object.cpp  Object.h  Sea_battles  autorun.sh  check_ships.cpp  cmake_install.cmake  main.cpp  test.cpp
Sea_battles/Buildings_classes/: Buildings.cpp  Buildings.h
Sea_battles/Metrics/: Metrics.cpp  Metrics.h
Sea_battles/Objects/: Map.cpp  Map.h  Object.cpp  Object.h
Sea_battles/Objects/Buildings_classes/: Buildings.cpp  Buildings.h
Sea_battles/Objects/Islands_classes/: Islands.cpp  Islands.h
Sea_battles/Objects/Ships_classes/: .Ships.cpp.swp  Ships.cpp  Ships.h
Sea_battles/Process/: Simple_processes.cpp  Simple_processes.h
Sea_battles/Ship_classes/: Ships.cpp  Ships.h
Sea_battles/Ships_classes/: Ships.cpp  Ships.h
Sea_battles/Tests/: test.cpp
Sea_battles/googletest-master/: googletest-distribution.cbp
Sea_battles/googletest-master/googlemock/: gmock.cbp
task1/: CMakeLists.txt
task3/: readme.txt
(+50 files in other folders)
